// protoc --proto_path=/usr/local/include/:. --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative  proto/users.proto
//export PATH="$PATH:$(go env GOPATH)/bin"
syntax = "proto3";

package users;
option go_package = "github.com/TranXuanPhong25/ecom/users/proto";
import "google/protobuf/empty.proto";

service UsersService {
  rpc CreateUserWithEmailAndPassword(Credentials) returns (google.protobuf.Empty);
  rpc GetUserByEmailAndPassword(Credentials) returns (User);
  rpc GetCurrentUser(UserId) returns (User);
  rpc DeleteUserById(UserId) returns (google.protobuf.Empty);
}

message Credentials {
  string email = 1;
  string password = 2;
}

message User {
  string user_id = 1;
  string email = 2;
}

message UserId {
  string user_id = 1;
}

